--- a/Project_optimizing_U-net/base_model_unet_keras.ipynb
+++ b/Project_optimizing_U-net/base_model_unet_keras.ipynb
@@ -7,7 +7,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "import glob\n",
     "import cv2\n",
     "import numpy as np\n",
@@ -35,7 +34,7 @@
    "outputs": [],
    "source": [
     "train_files = []\n",
-    "mask_files = glob.glob('../data/lgg-mri-segmentation/kaggle_3m/*/*_mask*')\n",
+    "mask_files = glob.glob('data/lgg-mri-segmentation/kaggle_3m/*/*_mask*')\n",
     "\n",
     "for i in mask_files:\n",
     "    train_files.append(i.replace('_mask',''))"
@@ -259,8 +258,8 @@
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data={\"filename\": train_files, 'mask' : mask_files})\n",
-    "df_train, df_test = train_test_split(df, test_size=0.1)\n",
-    "df_train, df_val = train_test_split(df_train, test_size=0.2)"
+    "df_train, df_test = train_test_split(df, test_size=0.1, random_state=1234)\n",
+    "df_train, df_val = train_test_split(df_train, test_size=0.2, random_state=1234)"
    ]
   },
   {
