--- a/Project_optimizing_U-net/base_model_unet_pytorch.ipynb
+++ b/Project_optimizing_U-net/base_model_unet_pytorch.ipynb
@@ -321,6 +321,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "covered-million",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "current-resident",
    "metadata": {
     "scrolled": false
@@ -339,6 +347,269 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 0\n",
+      "Train loss: -0.029295464812053574\n",
+      "Valid loss: -0.03258241970130863\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30c4a2e5fd954e63b75e580370a81e4f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 1\n",
+      "Train loss: -0.11991290890534098\n",
+      "Valid loss: -0.014601036285360655\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a3150ee63f234b0f935056b42a6e0653",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 2\n",
+      "Train loss: 0.18098646025690768\n",
+      "Valid loss: -0.010317468128050677\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9cbb3781ee674d12953f61cffa298da3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 3\n",
+      "Train loss: 0.07782179752571715\n",
+      "Valid loss: -0.016672275494784117\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "51ce2de4ec87406d82c5888abbf63ffb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 4\n",
+      "Train loss: 0.011552793301072799\n",
+      "Valid loss: -0.021254534212251503\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "65059ab016e746888e83b546b3131099",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 5\n",
+      "Train loss: 0.22034588975624905\n",
+      "Valid loss: -0.007922487566247582\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2eb8eb1d4ecb48bdb9391c275239e78b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 6\n",
+      "Train loss: 0.19470027436812717\n",
+      "Valid loss: -0.00921430108913531\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bb6859dbfcf1460699d3b3cb6e822415",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 7\n",
+      "Train loss: 0.12895845103905432\n",
+      "Valid loss: -0.0137878794533511\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0f2bc86c846c41f39c4bfa99589e3a5f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 8\n",
+      "Train loss: 0.09266761344147703\n",
+      "Valid loss: -0.012905797998731336\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54ce9ffe7b964ea48c812fb5b6470871",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 9\n",
+      "Train loss: 0.05171921426695513\n",
+      "Valid loss: -0.014179212824577311\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7408ea5f2bad4f96a851b36c1938acca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 10\n",
+      "Train loss: 0.008862690746577249\n",
+      "Valid loss: -0.018874587103103597\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8a63d07ce511450ba594593b4e90806f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/45 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EPOCH: 11\n",
+      "Train loss: 0.0020837967801425193\n",
+      "Valid loss: -0.04525720359136661\n",
+      "Early stop!\n"
+     ]
     }
    ],
    "source": [
