--- a/Project_optimizing_U-net/base_unet_keras.ipynb
+++ b/Project_optimizing_U-net/base_unet_keras.ipynb
@@ -2,10 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "norman-oregon",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-a688a10786dd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mtf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbackend\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimage\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mImageDataGenerator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import cv2\n",
@@ -28,8 +41,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "relative-organic",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'tensorflow'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-d6579f534729>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mtensorflow\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'tensorflow'"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tensorflow-gpu=2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +76,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alone-greensboro",
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "quiet-workstation",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,13 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "national-reporter",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.metrics import Metric\n",
-    "\n",
     "def dice_coef(y_true, y_pred, smooth=100):\n",
     "    y_truef = K.flatten(y_true)\n",
     "    y_predf = K.flatten(y_pred)\n",
@@ -164,8 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "documented-animation",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,8 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "roman-change",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,7 +280,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "scientific-receptor",
    "metadata": {},
    "outputs": [
     {
@@ -535,15 +560,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "pacific-general",
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tf' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-3b4e122c32c3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# del model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m model = tf.keras.models.load_model('weights/unet_best_keras', \n\u001b[0m\u001b[1;32m      3\u001b[0m                                    custom_objects={'dice_coef_loss' : dice_coef_loss, 'dice_coef' : dice_coef})\n\u001b[1;32m      4\u001b[0m \u001b[0mLEARNING_RATE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0.0005\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0moptimizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAdam\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mLEARNING_RATE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tf' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# del model\n",
     "model = tf.keras.models.load_model('weights/unet_best_keras', \n",
     "                                   custom_objects={'dice_coef_loss' : dice_coef_loss, 'dice_coef' : dice_coef})\n",
-    "\n",
+    "LEARNING_RATE = 0.0005\n",
     "optimizer = Adam(lr=LEARNING_RATE)\n",
     "\n",
     "model.compile(optimizer=optimizer, \n",
@@ -554,7 +590,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "structural-kidney",
    "metadata": {
     "scrolled": true
    },
@@ -591,7 +626,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "timely-television",
    "metadata": {
     "scrolled": false
    },
@@ -983,7 +1017,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "studied-incident",
    "metadata": {},
    "outputs": [],
    "source": []
