--- a/Project_optimizing_U-net/base_unet_torch.ipynb
+++ b/Project_optimizing_U-net/base_unet_torch.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "minimal-packet",
    "metadata": {},
    "outputs": [
@@ -113,12 +113,12 @@
     "valid_iterator = DataLoader(valid_dataset, batch_size=BATCH_SIZE, num_workers=4, shuffle=True)\n",
     "\n",
     "test_dataset = BrainMriDataset(df=df_test, transforms=valid_transforms)\n",
-    "test_iterator = DataLoader(test_dataset, batch_size=BATCH_SIZE, num_workers=4, shuffle=False)"
+    "test_iterator = DataLoader(test_dataset, batch_size=1, num_workers=3, shuffle=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "genuine-matter",
    "metadata": {},
    "outputs": [],
@@ -228,41 +228,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "thick-watershed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dice_coef(y_true, y_pred, smooth=100):\n",
-    "    y_truef = torch.flatten(y_true)\n",
-    "    y_predf = torch.flatten(y_pred)\n",
-    "    And = torch.sum(y_truef * y_predf)\n",
+    "class DiceBCELoss(nn.Module):\n",
+    "    def __init__(self, weight=None, size_average=True):\n",
+    "        super(DiceBCELoss, self).__init__()\n",
+    "\n",
+    "    def forward(self, inputs, targets, smooth=1):\n",
+    "        inputs = F.sigmoid(inputs)       \n",
+    "        inputs = inputs.view(-1)\n",
+    "        targets = targets.view(-1)\n",
+    "        \n",
+    "        intersection = (inputs * targets).sum()                            \n",
+    "        dice_loss = 1 - (2. * intersection + smooth) / (inputs.sum() + targets.sum() + smooth)  \n",
+    "        BCE = F.binary_cross_entropy(inputs, targets, reduction='mean')\n",
+    "        Dice_BCE = BCE + dice_loss\n",
+    "        \n",
+    "        return Dice_BCE\n",
+    "\n",
     "    \n",
-    "    return((2* And + smooth) / (torch.sum(y_truef) + torch.sum(y_predf) + smooth))\n",
+    "class DiceLoss(nn.Module):\n",
+    "    def __init__(self, weight=None, size_average=True):\n",
+    "        super(DiceLoss, self).__init__()\n",
     "\n",
-    "\n",
-    "def dice_coef_loss(y_true, y_pred):\n",
-    "    return - dice_coef(y_true, y_pred)\n",
-    "\n",
-    "\n",
-    "def iou(y_true, y_pred, smooth=100):\n",
-    "    intersection = torch.sum(y_true * y_pred)\n",
-    "    sum_ = torch.sum(y_true + y_pred)\n",
-    "    jac = (intersection + smooth) / (sum_ - intersection + smooth)\n",
+    "    def forward(self, inputs, targets, smooth=1):\n",
+    "        inputs = F.sigmoid(inputs)       \n",
+    "        inputs = inputs.view(-1)\n",
+    "        targets = targets.view(-1)\n",
+    "        \n",
+    "        intersection = (inputs * targets).sum()                            \n",
+    "        dice_loss = 1 - (2. * intersection + smooth) / (inputs.sum() + targets.sum() + smooth)  \n",
+    "        \n",
+    "        return dice_loss\n",
     "    \n",
-    "    return jac\n",
+    "    \n",
+    "def dice_coef(inputs, targets, smooth=1):\n",
+    "    inputs = F.sigmoid(inputs)\n",
+    "    inputs = inputs.view(-1)\n",
+    "    targets = targets.view(-1)\n",
     "\n",
-    "\n",
-    "def jac_distance(y_true, y_pred):\n",
-    "    y_truef = torch.flatten(y_true)\n",
-    "    y_predf = torch.flatten(y_pred)\n",
-    "\n",
-    "    return - iou(y_true, y_pred)"
+    "    intersection = (inputs * targets).sum()                            \n",
+    "    dice_coef = (2. * intersection + smooth) / (inputs.sum() + targets.sum() + smooth)\n",
+    "    \n",
+    "    return dice_coef"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "elect-irrigation",
    "metadata": {},
    "outputs": [],
@@ -270,6 +286,7 @@
     "def train(model, iterator, criterion, optimizer, device=device):  \n",
     "    model.train()\n",
     "    epoch_loss = 0\n",
+    "    epoch_acc  = 0\n",
     "        \n",
     "    for data, target in tqdm(iterator):\n",
     "        optimizer.zero_grad()\n",
@@ -279,22 +296,25 @@
     "\n",
     "        output = model(data)           \n",
     "\n",
-    "        pred   = F.sigmoid(output)\n",
-    "        pred   = (pred > 0.5).float()\n",
+    "#         pred   = F.sigmoid(output)\n",
+    "#         pred   = (pred > 0.5).float()\n",
     "\n",
     "        loss = criterion(output, target)\n",
-    "        loss.backward()\n",
+    "        loss.backward()    \n",
+    "        epoch_loss += loss.item()\n",
+    "        \n",
+    "        acc = dice_coef(output, target)\n",
+    "        epoch_acc += acc\n",
     "        \n",
     "        optimizer.step()\n",
-    "            \n",
-    "        epoch_loss += loss.item()\n",
     "\n",
-    "    return epoch_loss / len(iterator)\n",
+    "    return epoch_loss / len(iterator), epoch_acc / len(iterator)\n",
     "\n",
     "\n",
     "def evaluate(model, iterator, criterion, device):\n",
     "    model.eval()\n",
     "    epoch_loss = 0\n",
+    "    epoch_acc  = 0\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        for data, target in iterator:\n",
@@ -303,64 +323,36 @@
     "            \n",
     "            output = model(data)\n",
     "            \n",
-    "            pred   = F.sigmoid(output)\n",
-    "            pred   = (pred > 0.5).float()\n",
+    "#             pred   = F.sigmoid(output)\n",
+    "#             pred   = (pred > 0.5).float()\n",
     "            \n",
-    "            loss = criterion(pred, target)\n",
-    "            \n",
+    "            loss = criterion(output, target)\n",
     "            epoch_loss += loss.item()\n",
     "            \n",
-    "    return epoch_loss / len(iterator)\n",
+    "            acc = dice_coef(output, target)\n",
+    "            epoch_acc += acc\n",
+    "            \n",
+    "    return epoch_loss / len(iterator), epoch_acc / len(iterator)\n",
     "\n",
     "\n",
-    "def print_log(epoch_num, train_loss, valid_loss):\n",
-    "    print(f\"EPOCH: {epoch_num}\")\n",
-    "    print(f\"Train loss: {train_loss}\\nValid loss: {valid_loss}\")"
+    "def print_log(epoch_num, train_loss, valid_loss, train_acc, valid_acc):\n",
+    "    print(f\"EPOCH: {epoch_num + 1}\")\n",
+    "    print(f\"Train loss: {round(train_loss, 4)}\\tValid loss: {round(valid_loss, 4)}\")\n",
+    "    print(f\"Train acc : {round(float(train_acc), 4)}\\tValid acc : {round(float(valid_acc), 4)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "covered-million",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "id": "current-resident",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f56928ecb68346da9eaf1b52e547866c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 0\n",
-      "Train loss: -0.029295464812053574\n",
-      "Valid loss: -0.03258241970130863\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30c4a2e5fd954e63b75e580370a81e4f",
+       "model_id": "3dbb643fc536440b9ee2ac72fc26fb47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -376,14 +368,14 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 1\n",
-      "Train loss: -0.11991290890534098\n",
-      "Valid loss: -0.014601036285360655\n"
+      "Train loss: 0.1836\tValid loss: 0.242\n",
+      "Train acc : 0.8164\tValid acc : 0.758\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3150ee63f234b0f935056b42a6e0653",
+       "model_id": "382b9d5ba1684feb8ef9e595cb886798",
        "version_major": 2,
        "version_minor": 0
       },
@@ -399,14 +391,14 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 2\n",
-      "Train loss: 0.18098646025690768\n",
-      "Valid loss: -0.010317468128050677\n"
+      "Train loss: 0.1813\tValid loss: 0.1659\n",
+      "Train acc : 0.8187\tValid acc : 0.8341\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9cbb3781ee674d12953f61cffa298da3",
+       "model_id": "76bd8e60fa2744eaa21313149070f95b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -422,14 +414,14 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 3\n",
-      "Train loss: 0.07782179752571715\n",
-      "Valid loss: -0.016672275494784117\n"
+      "Train loss: 0.1759\tValid loss: 0.1639\n",
+      "Train acc : 0.8241\tValid acc : 0.8361\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51ce2de4ec87406d82c5888abbf63ffb",
+       "model_id": "22820034ce50459690e328317b284d62",
        "version_major": 2,
        "version_minor": 0
       },
@@ -445,14 +437,14 @@
      "output_type": "stream",
      "text": [
       "EPOCH: 4\n",
-      "Train loss: 0.011552793301072799\n",
-      "Valid loss: -0.021254534212251503\n"
+      "Train loss: 0.1701\tValid loss: 0.1716\n",
+      "Train acc : 0.8299\tValid acc : 0.8284\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65059ab016e746888e83b546b3131099",
+       "model_id": "6165883e035f4f5eb9e359c082c3d9ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,160 +456,25 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 5\n",
-      "Train loss: 0.22034588975624905\n",
-      "Valid loss: -0.007922487566247582\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2eb8eb1d4ecb48bdb9391c275239e78b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 6\n",
-      "Train loss: 0.19470027436812717\n",
-      "Valid loss: -0.00921430108913531\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb6859dbfcf1460699d3b3cb6e822415",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 7\n",
-      "Train loss: 0.12895845103905432\n",
-      "Valid loss: -0.0137878794533511\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f2bc86c846c41f39c4bfa99589e3a5f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 8\n",
-      "Train loss: 0.09266761344147703\n",
-      "Valid loss: -0.012905797998731336\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54ce9ffe7b964ea48c812fb5b6470871",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 9\n",
-      "Train loss: 0.05171921426695513\n",
-      "Valid loss: -0.014179212824577311\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7408ea5f2bad4f96a851b36c1938acca",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 10\n",
-      "Train loss: 0.008862690746577249\n",
-      "Valid loss: -0.018874587103103597\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8a63d07ce511450ba594593b4e90806f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/45 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EPOCH: 11\n",
-      "Train loss: 0.0020837967801425193\n",
-      "Valid loss: -0.04525720359136661\n",
-      "Early stop!\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-154921f4e2d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch_num\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mEPOCHS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mtrain_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0mvalid_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalid_iterator\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-a2cd55609710>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, iterator, criterion, optimizer, device)\u001b[0m\n\u001b[1;32m     17\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m         \u001b[0mepoch_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m         \u001b[0macc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdice_coef\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "model = UNet().to(device)\n",
+    "# model = UNet().to(device)\n",
+    "model = torch.load('weights/unet_best_pytorch').to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
     "scheduler = ReduceLROnPlateau(optimizer, 'min')\n",
-    "# criterion = nn.BCEWithLogitsLoss()\n",
-    "criterion = dice_coef_loss\n",
+    "# criterion = DiceBCELoss()\n",
+    "criterion = DiceLoss()\n",
     "\n",
     "n_paitience = 0\n",
     "best_valid_loss = float('inf')\n",
@@ -625,12 +482,12 @@
     "optimizer.step()\n",
     "\n",
     "for epoch_num in range(EPOCHS):\n",
-    "    train_loss = train(model, train_iterator, criterion, optimizer, device)\n",
-    "    valid_loss = evaluate(model, valid_iterator, criterion, device)\n",
+    "    train_loss, train_acc = train(model, train_iterator, criterion, optimizer, device)\n",
+    "    valid_loss, valid_acc = evaluate(model, valid_iterator, criterion, device)\n",
     "    \n",
     "    scheduler.step(valid_loss)\n",
     "    \n",
-    "    print_log(epoch_num, train_loss, valid_loss)\n",
+    "    print_log(epoch_num, train_loss, valid_loss, train_acc, valid_acc)\n",
     "    \n",
     "    if n_paitience < PAITIENCE:\n",
     "        if best_valid_loss > valid_loss:\n",
@@ -647,8 +504,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "annoying-swing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "04d35ede5a044ababa7299bdb4c00e7b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/5 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.18365927992279596,\n",
+       " 0.19540355041736865,\n",
+       " 0.19238634752559905,\n",
+       " 0.18637470495306505,\n",
+       " 0.19111231629175085]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "device = 'cpu'\n",
+    "model = torch.load('weights/unet_best_torch').to(device)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "criterion = DiceLoss()\n",
+    "\n",
+    "time_list = []\n",
+    "for i in tqdm(range(5)):\n",
+    "    st = time.time()\n",
+    "    loss, acc = evaluate(model, test_iterator, criterion, device)\n",
+    "    ed = time.time()\n",
+    "    \n",
+    "    time_diff = (ed - st) / len(test_iterator)\n",
+    "\n",
+    "    time_list.append(time_diff)\n",
+    "    \n",
+    "time_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "unsigned-frank",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5693617194663478"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(time_list) * 3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "ordered-drain",
+   "id": "higher-information",
    "metadata": {},
    "outputs": [],
    "source": []
